discussion/kv_engine/187949/187949_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

Add experimental support for gRPC

Very WIP experimental support for gRPC

  * _BLOCKING_ the gRPC call for the duration of an operation
    (intentionally as we've not even tried to plug it into
    our async mode (thread is just waiting for the notification)
  * Use a different protocol than stellar-nebula as it:
    * Duplicated a lot of structures with different names
      which would increase the amount of work trying to
      add missing fields
    * Better structure some of the data
  * Does not deal with all datatypes in all cases, copying over
    xattrs etc
  * The ticker based auth cache should not live forever ;)

@todo add back Subdoc and RangeScan

    ./grpc_test --user trond --password asdfasdf Mutate '
         {
           "url": {
             "bucket_name": "bucket",
             "scope_name": "myscope",
             "collection_name": "mycollection",
             "document_id": "document"
           },
           "operation": "insert",
           "content": {
             "content": "1234"
           }
         }'
    {
      "bucket_name": "bucket",
      "cas": 1678354266116587520,
      "collection_id": 8,
      "seq_no": 3,
      "vbucket_id": 105,
      "vbucket_uuid": 257727767609388
    }

    ./grpc_test --user trond --password asdfasdf Counter '
         {
           "url": {
             "bucket_name": "bucket",
             "collection_id": 8,
             "vbucket_id": 105,
             "document_id": "document"
           },
           "delta": 1
         }'
    {
      "content": 1235,
      "mutation_token": {
        "bucket_name": "bucket",
        "cas": 1678354598589497344,
        "collection_id": 8,
        "seq_no": 4,
        "vbucket_id": 105,
        "vbucket_uuid": 257727767609388
      }
    }

    ./grpc_test --user trond --password asdfasdf Get '
         {
           "url": {
             "bucket_name": "bucket",
             "collection_id": 8,
             "vbucket_id": 105,
             "document_id": "document"
           }
         }'
    {
      "cas": 1678354598589497344,
      "collection_id": 8,
      "content": {
        "content": "1235",
        "content-type": "json"
      },
      "vbucket_id": 105
    }

Change-Id: I93f818408ff1b4b41ce2c4de7febd4d80efae525

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2023-04-02 08:06:07.000000000
Message: 
Patch Set 4: Patch Set 3 was rebased
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-04-02 08:42:34.000000000
Message: 
Patch Set 4: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/23461/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/23461/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/23147/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/grpc/rpc_command_context.h:19:10: error: "kv.v1.grpc.pb.h" file not found [clang-diagnostic-error]
#include "kv.v1.grpc.pb.h"
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/grpc/rpc_cookie.h:20:10: error: "grpcpp/server.h" file not found [clang-diagnostic-error]
#include <grpcpp/server.h>
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/programs/grpc/main.cc:11:10: error: "kv.v1.grpc.pb.h" file not found [clang-diagnostic-error]
#include "kv.v1.grpc.pb.h"
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/protocol/stellar/json_conversion.h:13:10: error: "kv.v1.grpc.pb.h" file not found [clang-diagnostic-error]
#include "kv.v1.grpc.pb.h"
         ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/23147/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/grpc/rpc_command_context.h:19:10:
error: "kv.v1.grpc.pb.h" file not found [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/23147/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/52628/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/44151/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/12880/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/1957/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/24807/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/25216/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/26534/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/33632/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12961/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/25680/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
